Isolate kls managed resources from each other by managing whole environment (#137)
* Isolate kls managed resources from each other by managing a namespace

* Update sample postgresql plugin

* Remove namespace reference from apiserver/cli

* Fix typos

* Improve object management flow for Kuberlogic controller
