# modules/dynamic-apiserver/internal/app/service_list.go
@@ -17,7 +17,6 @@ func (srv *Service) ServiceListHandler(params apiService.ServiceListParams) midd
 
 	err := srv.kuberlogicClient.Get().
 		Resource(serviceK8sResource).
-		Namespace(params.Namespace).
 		Do(ctx).
 		Into(res)
 	if err != nil {
